[gd_scene load_steps=2 format=3 uid="uid://bx3m8n2k5qwer"]

[ext_resource type="Script" path="res://scripts/ContentImportRunner.gd" id="1_import_runner"]

[node name="ContentImportScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_import_runner")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ðŸ“¦ CONTENT IMPORTER - SafePlace Fase 2"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inizializzazione sistema import..."
horizontal_alignment = 1

[node name="PhaseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fase: Preparazione"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProcessedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Processati: 0"

[node name="ImportedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Importati: 0"

[node name="SkippedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Skippati: 0"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Avvio sistema import massiccio..."

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartImportButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "ðŸš€ AVVIA IMPORT"

[node name="TestModeButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "ðŸ§ª MODALITÃ€ TEST"

[node name="ValidateButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "âœ… VALIDA SISTEMA" 